--- a/index.html
+++ b/index.html
@@ -130,11 +130,20 @@
             color: white; 
             border: none; 
             border-radius: 50%;
-            margin-left: 10px;
         }
         #mic-button.recording {
             background-color: #dc3545;
             animation: pulse 1s infinite;
+        }
+        /* 新增：喇叭按鈕樣式，與麥克風按鈕保持一致 */
+        #play-button {
+            padding: 15px; 
+            font-size: 1.5em; 
+            cursor: pointer; 
+            background-color: #6c757d; 
+            color: white; 
+            border: none; 
+            border-radius: 50%;
         }
         @keyframes pulse {
             0% {box-shadow: 0 0 0 0 rgba(220, 53, 69, 0.7);}
@@ -158,10 +167,10 @@
     
     <div id="audio-hint">請選擇模式並點擊喇叭圖標開始遊戲。</div>
 
-    <div style="display:flex; justify-content:center; align-items:center;">
-        <button id="play-button" onclick="playAudio()" disabled>🔊</button>
-        <button id="mic-button" onclick="startSpeechRecognition()" disabled>🎤</button>
-    </div>
+   <div style="display:flex; justify-content:center; align-items:center;">
+    <button id="play-button" onclick="playAudio()" >▶</button>
+    <button id="mic-button" onclick="startSpeechRecognition()" disabled>🎤</button>
+   </div>
 
     <div id="options-container" class="options-locked"> 
         </div>
