--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             animation: pulse 1s infinite;
         }
         /* 新增：喇叭按鈕樣式，與麥克風按鈕保持一致 */
-        #play-button {
+        /* #play-button {
             padding: 15px; 
             font-size: 1.5em; 
             cursor: pointer; 
@@ -144,7 +144,7 @@
             color: white; 
             border: none; 
             border-radius: 50%;
-        }
+        } */
         @keyframes pulse {
             0% {box-shadow: 0 0 0 0 rgba(220, 53, 69, 0.7);}
             70% {box-shadow: 0 0 0 10px rgba(220, 53, 69, 0);}
@@ -168,7 +168,8 @@
     <div id="audio-hint">請選擇模式並點擊喇叭圖標開始遊戲。</div>
 
    <div style="display:flex; justify-content:center; align-items:center;">
-    <button id="play-button" onclick="playAudio()" >▶</button>
+    <!-- <button id="play-button" onclick="playAudio()" >▶</button> -->
+    <button id="play-button" onclick="playAudio()" style="padding: 15px; font-size: 1.5em; cursor: pointer; background-color: #6c757d; color: white; border: none; border-radius: 50%; margin-right: 10px;">▶</button>
     <button id="mic-button" onclick="startSpeechRecognition()" disabled>🎤</button>
    </div>
 
