--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
     <div id="audio-hint">請選擇模式並點擊喇叭圖標開始遊戲。</div>
 
    <div style="display:flex; justify-content:center; align-items:center;">
-    <!-- <button id="play-button" onclick="playAudio()" >▶</button> -->
-    <button id="play-button" onclick="playAudio()" style="padding: 15px; font-size: 1.5em; cursor: pointer; background-color: #6c757d; color: white; border: none; border-radius: 50%; margin-right: 10px;">▶</button>
+    <!-- <button id="play-button" onclick="playAudio()" >🔊</button> -->
+    <button id="play-button" onclick="playAudio()" style="padding: 15px; font-size: 1.5em; cursor: pointer; background-color: #6c757d; color: white; border: none; border-radius: 50%; margin-right: 30px;">▶</button>
     <button id="mic-button" onclick="startSpeechRecognition()" disabled>🎤</button>
    </div>
 
