--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 
    <div style="display:flex; justify-content:center; align-items:center;">
     <!-- <button id="play-button" onclick="playAudio()" >🔊</button> -->
+    <!-- <button id="play-button" onclick="playAudio()" style="padding: 15px; font-size: 1.5em; cursor: pointer; background-color: #6c757d; color: white; border: none; border-radius: 50%; margin-right: 40px;">🔊</button> -->
     <button id="play-button" onclick="playAudio()" style="padding: 15px; font-size: 1.5em; cursor: pointer; background-color: #6c757d; color: white; border: none; border-radius: 50%; margin-right: 40px;">🔊</button>
     <button id="mic-button" onclick="startSpeechRecognition()" disabled>🎤</button>
    </div>
